[package]
name = "azure_jwt"
version = "0.2.2"
authors = ["Carl Fredrik Samson <cf@samson.no>"]
edition = "2018"
repository = "https://github.com/cfsamson/azure-jwt"
documentation = "https://docs.rs/azure-jwt/"
readme = "README.md"
license = "MIT"
keywords = ["azure", "token", "jwt", "jwk", "validation"]
categories = ["authentication"]
description = """
A simple JWT validator for Microsoft Azure Id tokens.
"""

[dependencies]
jsonwebtoken = { version = "9", default-features = false }
reqwest = {version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"]}
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
criterion = "0.3.4"
base64 = "0.22.0"

[[bench]]
name = "validation"
harness = false
